# onigiri_war

./: README.md
onigiri_controll/onigiri_navigation/: CMakeLists.txt  README_onigiri_war.txt  package.xml
onigiri_controll/onigiri_navigation/launch/: amcl.launch.xml  keyboard_teleop.launch  navigation.launch  rviz_cfg.rviz  rviz_cfg_slam.rviz  scanmatcher.launch  slam.launch
onigiri_controll/onigiri_navigation/maps/: map.pgm
onigiri_controll/onigiri_navigation/maps/old/20180726/: map.pgm
onigiri_controll/onigiri_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
onigiri_controll/onigiri_navigation/scripts/: copy_scan.py  copy_scan_red_bot.py  myrandom.py
onigiri_controll/wp_navigation/: CMakeLists.txt  package.xml
onigiri_controll/wp_navigation/scripts/: wp_navigation.py
onigiri_controll/wp_navigation/src/: wp_navigation.cpp
onigiri_war/launch/: sim_robot_run.launch  your_onigiri.launch  your_onigiri_blue_nongroup.launch  your_onigiri_red_nongroup.launch
