<?xml version="1.0"?>
<package>
  <name>wp_navigation</name>
  <version>0.0.0</version>
  <description>A waypoint navigation</description>

  <maintainer email="kit@example.com">kit</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
